# korangar

./: .gitignore  Cargo.toml  LICENSE.md  README.md  flake.nix  korangar.grf  korangar.nix  rust-toolchain.toml  rustfmt.toml
korangar/: Cargo.toml  build.rs  shell.nix
korangar-audio/: Cargo.toml  LICENSE  README.md
korangar-audio/src/: backend.rs  command.rs  decibels.rs  device_info.rs  error.rs  frame.rs  lib.rs  listener.rs  manager.rs  parameter.rs  playback_state_manager.rs  resampler.rs  sound.rs  track.rs  tween.rs
korangar-audio/src/backend/: cpal.rs  renderer.rs  resources.rs
korangar-audio/src/resampler/: fft.rs
korangar-audio/src/sound/: error.rs  static_sound.rs  streaming.rs  symphonia.rs  transport.rs
korangar-audio/src/track/: main.rs  sub.rs
korangar-collision/: Cargo.toml  README.md
korangar-collision/src/: aabb.rs  aligned_plane.rs  frustum.rs  kdtree.rs  lib.rs  mod.rs  plane.rs  sphere.rs
korangar-interface/: Cargo.toml
korangar-interface/component-macros/: Cargo.toml
korangar-interface/components/: Cargo.toml
korangar-interface/components/src/: lib.rs
korangar-interface/macros/: Cargo.toml
korangar-interface/macros/src/: element.rs  helper.rs  lib.rs  window.rs
korangar-interface/src/: application.rs  lib.rs  theme.rs
korangar-interface/src/components/: button.rs  collapsable.rs  collapsible.rs  drop_down.rs  either.rs  field.rs  fragment.rs  mod.rs  scroll_view.rs  split.rs  state_button.rs  tabs.rs  text.rs  text_box.rs
korangar-interface/src/element/: id.rs  mod.rs  state.rs
korangar-interface/src/event/: action.rs  handler.rs  mod.rs  queue.rs
korangar-interface/src/layout/: alignment.rs  area.rs  mod.rs  resolver.rs  tooltip.rs
korangar-interface/src/window/: anchor.rs  mod.rs
korangar-networking/: Cargo.toml  README.md
korangar-networking/examples/: ollama-chat-bot.rs  rescue-my-character.rs  specific-packet-version.rs
korangar-networking/src/: entity.rs  event.rs  lib.rs  server.rs
korangar-networking/src/packet_version/: mod.rs  receiver_base.rs  sender_base.rs
korangar-networking/src/packet_versions/: mod.rs  version_20120307.rs  version_20220406.rs
korangar-util/: Cargo.toml  README.md
korangar-util/src/: lib.rs  loader.rs  math.rs  pathing.rs
korangar-util/src/collision/: aligned_plane.rs  kdtree.rs  sphere.rs
korangar-util/src/container/: generational_slab.rs  lru.rs  mod.rs  simple_cache.rs  simple_slab.rs
korangar/archive/data/: sclientinfo.xml
korangar/components/: Cargo.toml
korangar/components/src/: lib.rs
korangar/data/: sclientinfo.xml
korangar/shaders/: README.md
korangar/shaders/modules/: depth_texture.slang  directional_shadow.slang  forward.slang  globals.slang  interface.slang  matrix.slang  picker.slang  point_shadow.slang  postprocessing.slang  screen_space.slang  sdsm.slang  transform.slang
korangar/src/: lib.rs  main.rs  state.rs
korangar/src/audio/: mod.rs  settings.rs
korangar/src/debug/: mod.rs
korangar/src/graphics/: buffer.rs  capabilities.rs  color.rs  engine.rs  error.rs  features.rs  frame_pacer.rs  graphic_settings.rs  instruction.rs  memory.rs  mod.rs  picker_target.rs  primitives.rs  projection.rs  render_settings.rs  sampler.rs  settings.rs  shader_compiler.rs  surface.rs  texture.rs  transform.rs
korangar/src/input/: event.rs  key.rs  mod.rs  mode.rs
korangar/src/interface/: application.rs  dialog.rs  layout.rs  linked.rs  mod.rs  resource.rs
korangar/src/inventory/: hotbar.rs  mod.rs  skills.rs
korangar/src/loaders/: color.rs  error.rs  mod.rs  smoothing.rs  version.rs
korangar/src/network/: login.rs  mod.rs
korangar/src/networking/: mod.rs
korangar/src/renderer/: effect.rs  game_interface.rs  interface.rs  marker.rs  mod.rs
korangar/src/settings/: audio.rs  game.rs  graphic.rs  interface.rs  login.rs  mod.rs
korangar/src/state/: character_slots.rs  hotbar.rs  inventory.rs  mod.rs  skills.rs
korangar/src/system/: math.rs  mod.rs  timer.rs  vulkan.rs
korangar/src/world/: fade_state.rs  ground_item.rs  mod.rs  pathing.rs
korangar_audio/: Cargo.toml
korangar_audio/src/: lib.rs
korangar_interface/: Cargo.toml  README.md
korangar_interface/component_macros/: Cargo.toml
korangar_interface/component_macros/src/: lib.rs
korangar_interface/components/: Cargo.toml
korangar_interface/components/src/: lib.rs
korangar_interface/macros/: Cargo.toml
korangar_interface/macros/src/: element.rs  helper.rs  lib.rs  utils.rs  window.rs
korangar_interface/procedural/: Cargo.toml
korangar_interface/procedural/src/: bound.rs  element.rs  lib.rs  utils.rs  window.rs
korangar_interface/src/: application.rs  lib.rs  state.rs  theme.rs
korangar_interface/src/components/: button.rs  collapsable.rs  drop_down.rs  field.rs  fragment.rs  mod.rs  scroll_view.rs  split.rs  state_button.rs  text.rs  text_box.rs  value.rs
korangar_interface/src/element/: mod.rs  prototype.rs  state.rs  store.rs
korangar_interface/src/elements/: base.rs  mod.rs  prototype.rs  value.rs
korangar_interface/src/event/: action.rs  change.rs  hover.rs  (+2 more)
korangar_networking/: Cargo.toml  README.md
korangar_networking/examples/: ollama-chat-bot.rs
korangar_networking/src/: entity.rs  event.rs  hotkey.rs  inventory.rs  items.rs  lib.rs  message.rs
korangar_util/: Cargo.toml
korangar_util/src/: color.rs  lib.rs  loader.rs  math.rs  rectangle.rs  texture_atlas.rs
ragnarok-formats/: Cargo.toml
ragnarok-formats/src/: action.rs  archive.rs  map.rs  model.rs  signature.rs  sprite.rs  transform.rs  version.rs
ragnarok-packets/: Cargo.toml  README.md
ragnarok-packets/examples/: pcap.rs
ragnarok-packets/src/: handler.rs  lib.rs  position.rs
ragnarok_formats/: Cargo.toml  README.md
ragnarok_formats/src/: action.rs  archive.rs  color.rs  effect.rs  lib.rs  map.rs  model.rs  signature.rs  sprite.rs  transform.rs  version.rs
ragnarok_networking/: Cargo.toml  README.md
ragnarok_networking/src/: lib.rs
ragnarok_packets/: Cargo.toml  README.md
ragnarok_packets/examples/: pcap.rs
ragnarok_packets/src/: handler.rs  lib.rs  position.rs
(+1259 files in other folders)
