[workspace]
resolver = "2"
members = ["korangar", "ragnarok_*", "korangar_*"]

[workspace.dependencies]
bitflags = "2.6"
bumpalo = "3"
bytemuck = "1.17"
cgmath = "0.18"
chrono = "0.4"
cpal = "0.15"
derive-new = "0.7"
etherparse = "0.16"
hashbrown = "0.15"
image = { version = "0.25", default-features = false }
kira = { version = "0.9", default-features = false }
korangar_audio = { path = "korangar_audio" }
korangar_debug = { path = "korangar_debug" }
korangar_interface = { path = "korangar_interface" }
korangar_networking = { path = "korangar_networking" }
korangar_util = { path = "korangar_util" }
lunify = "1.1"
mlua = "0.10"
num = "0.4"
option-ext = "0.2"
pathfinding = "4.10"
pcap = "2.0"
pollster = "0.4"
proc-macro2 = "1.0"
quote = "1.0"
ragnarok_bytes = { path = "ragnarok_bytes" }
ragnarok_formats = { path = "ragnarok_formats" }
ragnarok_packets = { path = "ragnarok_packets" }
ragnarok_procedural = { path = "ragnarok_procedural" }
rand = "0.8"
random_color = "1.0"
rayon = "1.10"
reqwest = "0.12"
ron = "0.8"
rusttype = "0.9"
serde = "1.0"
serde-xml-rs = "0.6"
spin_sleep = "1.2"
syn = "2.0"
tokio = { version = "1.39", default-features = false }
walkdir = "2.5"
wgpu = "23.0"
winit = "0.30"
xml-rs = "0.8"
yazi = "0.2"

[profile.dev.build-override]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.korangar]
opt-level = 0

[profile.dev.package.korangar_audio]
opt-level = 3

[profile.dev.package.korangar_debug]
opt-level = 3

[profile.dev.package.korangar_interface]
opt-level = 3

[profile.dev.package.korangar_networking]
opt-level = 3

[profile.dev.package.korangar_util]
opt-level = 3

[profile.dev.package.ragnarok_bytes]
opt-level = 3

[profile.dev.package.ragnarok_formats]
opt-level = 3

[profile.dev.package.ragnarok_packets]
opt-level = 3

[profile.dev.package.ragnarok_procedural]
opt-level = 3
