[workspace]
resolver = "3"
members = ["korangar", "ragnarok_*", "korangar_*"]

[workspace.dependencies]
arrayvec = "0.7"
bitflags = "2"
blake3 = { version = "1.5", default-features = true }
block_compression = { version = "0.3", default-features = false }
bumpalo = "3"
bytemuck = "1"
cgmath = "0.18"
chrono = "0.4"
cosmic-text = { version = "0.12", default-features = false }
cpal = "0.15"
derive-new = "0.7"
encoding_rs = "0.8"
etherparse = "0.17"
fast-srgb8 = "1"
flate2 = { version = "1", default-features = false }
hashbrown = "0.15"
image = { version = "0.25", default-features = false }
kira = { version = "0.10", default-features = false }
korangar_audio = { path = "korangar_audio" }
korangar_debug = { path = "korangar_debug" }
korangar_interface = { path = "korangar_interface" }
korangar_networking = { path = "korangar_networking" }
korangar_util = { path = "korangar_util" }
lunify = "1"
mlua = "0.10"
num = "0.4"
option-ext = "0.2"
pcap = "2"
pollster = "0.4"
proc-macro2 = "1"
quick-xml = "0.37"
quote = "1"
ragnarok_bytes = { path = "ragnarok_bytes" }
ragnarok_formats = { path = "ragnarok_formats" }
ragnarok_packets = { path = "ragnarok_packets" }
ragnarok_procedural = { path = "ragnarok_procedural" }
rand_aes = { version = "0.5", default-features = false }
rayon = "1"
reqwest = "0.12"
ron = "0.8"
serde = "1"
spin_sleep = "1"
syn = "2"
sys-locale = "0.3"
tokio = { version = "1", default-features = false }
walkdir = "2"
wgpu = "24"
winit = "0.30"

[profile.release]
lto = "thin"

[profile.dev.build-override]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.korangar]
opt-level = 0

[profile.dev.package.korangar_audio]
opt-level = 3

[profile.dev.package.korangar_debug]
opt-level = 3

[profile.dev.package.korangar_interface]
opt-level = 3

[profile.dev.package.korangar_networking]
opt-level = 3

[profile.dev.package.korangar_util]
opt-level = 3

[profile.dev.package.ragnarok_bytes]
opt-level = 3

[profile.dev.package.ragnarok_formats]
opt-level = 3

[profile.dev.package.ragnarok_packets]
opt-level = 3

[profile.dev.package.ragnarok_procedural]
opt-level = 3
