[package]
name = "korangar-collision"
version = "0.1.0"
edition = "2024"

[dependencies]
cgmath = { workspace = true }
hashbrown = { workspace = true }
korangar-container = { workspace = true }
korangar-interface = { workspace = true, optional = true }
rust-state = { workspace = true, optional = true }

[features]
interface = ["rust-state", "korangar-interface"]
