[package]
name = "korangar"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = { workspace = true }
block_compression = { workspace = true, features = ["bc7", "wgpu"] }
bumpalo = { workspace = true, features = ["allocator_api"] }
bytemuck = { workspace = true, features = ["derive", "extern_crate_std", "min_const_generics"] }
cgmath = { workspace = true, features = ["mint", "serde"] }
chrono = { workspace = true }
cosmic-text = { workspace = true, features = ["std", "fontconfig"] }
derive-new = { workspace = true }
encoding_rs = { workspace = true }
flate2 = { workspace = true, features = ["zlib-rs"] }
hashbrown = { workspace = true }
image = { workspace = true, features = ["bmp", "jpeg", "png", "tga", "rayon"] }
korangar_audio = { workspace = true }
korangar_debug = { workspace = true, optional = true }
korangar_interface = { workspace = true, features = ["serde", "cgmath"] }
korangar_networking = { workspace = true, features = ["debug"] }
korangar_util = { workspace = true, features = ["interface"] }
lunify = { workspace = true }
mlua = { workspace = true, features = ["lua51", "vendored"] }
num = { workspace = true }
option-ext = { workspace = true }
pollster = { workspace = true }
quick-xml = { workspace = true, features = ["serde", "serialize"] }
ragnarok_bytes = { workspace = true, features = ["derive", "cgmath"] }
ragnarok_formats = { workspace = true, features = ["interface"] }
ragnarok_packets = { workspace = true, features = ["derive", "interface", "packet-to-prototype-element"] }
rand = { workspace = true }
random_color = { workspace = true, optional = true }
rayon = { workspace = true }
ron = { workspace = true }
serde = { workspace = true }
spin_sleep = { workspace = true }
sys-locale = { workspace = true }
walkdir = { workspace = true }
wgpu = { workspace = true, features = ["static-dxc"] }
winit = { workspace = true }

[features]
debug = ["korangar_debug", "korangar_audio/debug", "ragnarok_packets/debug", "random_color"]
patched_as_folder = []
plain = ["korangar_debug/plain"]
unicode = ["korangar_debug/unicode"]
flac = ["korangar_audio/flac"]
