[package]
name = "korangar"
version = "0.1.1"
edition = "2024"

[dependencies]
arrayvec = { workspace = true }
blake3 = { workspace = true, features = ["std"] }
block_compression = { workspace = true, features = ["bc7", "wgpu"] }
bumpalo = { workspace = true, features = ["allocator_api"] }
bytemuck = { workspace = true, features = ["derive", "extern_crate_std", "min_const_generics"] }
cgmath = { workspace = true, features = ["mint", "serde"] }
chrono = { workspace = true }
cosmic-text = { workspace = true, features = ["std", "fontconfig"] }
ctrlc = { workspace = true }
ddsfile = { workspace = true }
encoding_rs = { workspace = true }
fast-srgb8 = { workspace = true }
flate2 = { workspace = true, features = ["zlib-rs"] }
hashbrown = { workspace = true, features = ["serde"] }
image = { workspace = true, features = ["bmp", "jpeg", "png", "tga", "rayon"] }
korangar-audio = { workspace = true }
korangar-components = { path = "components" }
korangar-collision = { workspace = true, features = ["interface"] }
korangar-container = { workspace = true, features = ["interface"] }
korangar-debug = { workspace = true, optional = true }
korangar-interface = { workspace = true, features = ["serde", "cgmath", "theme-element"] }
korangar-loaders = { workspace = true }
korangar-networking = { workspace = true, features = ["interface"] }
korangar-video = { workspace = true }
lunify = { workspace = true }
mlua = { workspace = true, features = ["lua51", "vendored"] }
num = { workspace = true }
option-ext = { workspace = true }
pollster = { workspace = true }
quick-xml = { workspace = true, features = ["serde", "serialize"] }
ragnarok-bytes = { workspace = true, features = ["derive", "cgmath"] }
ragnarok-formats = { workspace = true, features = ["interface"] }
ragnarok-packets = { workspace = true, features = ["derive", "interface", "packet-to-state-element"] }
rand_aes = { workspace = true, features = ["tls", "tls_aes128_ctr128"] }
rayon = { workspace = true }
ron = { workspace = true }
rust-state = { workspace = true }
serde = { workspace = true }
sevenz-rust2 = { workspace = true, features = ["compress"] }
smallvec = { workspace = true, features = ["const_generics", "const_new", "union"] }
spin_sleep = { workspace = true }
sys-locale = { workspace = true }
walkdir = { workspace = true }
wgpu = { workspace = true, features = ["static-dxc", "spirv"] }
winit = { workspace = true }

[build-dependencies]
sevenz-rust2 = { workspace = true, features = ["compress"] }

[features]
debug = ["korangar-audio/debug", "korangar-debug", "korangar-interface/debug", "korangar-networking/debug", "ragnarok-packets/debug"]
plain = ["korangar-debug/plain"]
unicode = ["korangar-debug/unicode"]
flac = ["korangar-audio/flac"]
