[package]
name = "korangar_audio"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = { workspace = true }
cgmath = { workspace = true, features = ["mint"] }
kira = { workspace = true, features = ["cpal", "mp3", "wav"] }
korangar_debug = { workspace = true, optional = true }
korangar_util = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]

[features]
debug = ["korangar_debug"]
flac = ["kira/flac"]
