[package]
name = "korangar_interface"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { workspace = true }
cgmath = { workspace = true, optional = true }
interface_macros = { path = "macros" }
interface_component_macros = { path = "component_macros" }
interface_components = { path = "components" }
korangar_debug = { workspace = true, optional = true }
num = { workspace = true }
option-ext = { workspace = true }
rust_state = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }

[features]
cgmath = ["dep:cgmath"]
debug = ["korangar_debug"]
serde = ["dep:serde"]
