[package]
name = "korangar_interface"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { workspace = true }
cgmath = { workspace = true, optional = true }
interface_procedural = { path = "procedural" }
korangar_debug = { workspace = true, optional = true }
num = { workspace = true }
option-ext = { workspace = true }
serde = { workspace = true, optional = true }

[features]
cgmath = ["dep:cgmath"]
debug = ["korangar_debug"]
serde = ["dep:serde"]
