[package]
name = "korangar_networking"
version = "0.1.0"
edition = "2021"

[dependencies]
korangar_debug = { workspace = true, optional = true }
ragnarok_bytes = { workspace = true }
ragnarok_packets = { workspace = true }
reqwest = { workspace = true, features = ["json"], optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
tokio = { workspace = true, features = ["rt", "io-util", "net", "macros", "sync", "time"] }

[features]
debug = []
example = ["korangar_debug", "reqwest", "serde"]
