[package]
name = "korangar_networking"
version = "0.1.0"
edition = "2021"

[dependencies]
ragnarok_bytes = { workspace = true }
ragnarok_packets = { workspace = true }
tokio = { workspace = true, features = ["rt", "io-util", "net", "macros", "sync", "time"] }

[dev-dependencies]
korangar_debug = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }

[features]
debug = []
