[package]
name = "korangar_networking"
version = "0.1.0"
edition = "2024"

[dependencies]
korangar_interface = { workspace = true, optional = true }
ragnarok_bytes = { workspace = true }
ragnarok_packets = { workspace = true }
rust_state = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt", "io-util", "net", "macros", "sync", "time"] }

[dev-dependencies]
korangar_debug = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }

[features]
debug = []
interface = ["korangar_interface", "rust_state"]
