[package]
name = "ragnarok_formats"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { workspace = true }
cgmath = { workspace = true }
korangar_interface = { workspace = true, optional = true }
ragnarok_bytes = { workspace = true, features = ["derive", "cgmath"] }

[features]
interface = ["korangar_interface"]
