[package]
name = "ragnarok_packets"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { workspace = true }
derive-new = { workspace = true }
korangar_interface = { workspace = true, optional = true }
ragnarok_bytes = { workspace = true, features = ["derive"] }
ragnarok_procedural = { workspace = true }

[features]
debug = []
derive = []
interface = ["korangar_interface"]
packet-to-prototype-element = ["interface"]
