[package]
name = "ragnarok_packets"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { workspace = true }
korangar_interface = { workspace = true, optional = true }
ragnarok_bytes = { workspace = true, features = ["derive"] }
ragnarok_procedural = { workspace = true }

[dev-dependencies]
etherparse = { workspace = true }
korangar_debug = { workspace = true }
pcap = { workspace = true }

[features]
debug = []
derive = []
interface = ["korangar_interface"]
packet-to-prototype-element = ["interface"]
unicode = ["korangar_debug/unicode"]
